--- a/app/index.html
+++ b/app/index.html
@@ -13,19 +13,20 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="app.less">
+  <link rel="stylesheet/less" type="text/css" href="app.less">
+
+  <script src="bower_components/less/dist/less.min.js"></script>
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
   <main class="main-wrapper">
     <div ng-include="'components/templates/header.html'"></div>
-    <aside class="aside-wrapper">
-      <ul class="menu">
-        <li><a href="#/click">Click</a></li>
-      </ul>
-    </aside>
-    <section ng-view></section>
-    <div ng-include="'components/templates/footer.html'"></div>
+    <div class="contents-wrapper">
+      <section class="section-wrapper">
+        <div ng-view></div>
+        <div ng-include="'components/templates/footer.html'"></div>        
+      </section>
+    </div>
   </main>
 
   <!--[if lt IE 7]>
